tests/cases/compiler-development/artifact/errors/diagnostic-trait-duplicate-method.diagnostic
diagnostic error code=T0001 family=type message="duplicate method 'show' in trait 'Show'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/traits/errors/trait-duplicate-method.ari" display="tests/cases/traits/errors/trait-duplicate-method.ari" bytes=102
  Label index=0 role=primary source_id=0 source="tests/cases/traits/errors/trait-duplicate-method.ari" line=3 column=6 end_line=3 end_column=10 byte_start=44 byte_end=48 message=""
  Snippet label=0 text="  --> tests/cases/traits/errors/trait-duplicate-method.ari:3:6\n   |\n 3 |   fn show(value: T) -> i64\n   |      ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/traits/errors/trait-duplicate-method.ari" line=2 column=6 end_line=2 end_column=10 byte_start=21 byte_end=25 message="previous method 'show' in trait 'Show'"
  Snippet label=1 text="  --> tests/cases/traits/errors/trait-duplicate-method.ari:2:6\n   |\n 2 |   fn show(self) -> i64\n   |      ^^^^"
  Note index=0 location=none message="previous declaration is shown as a secondary label"
  Help index=0 location=none message="rename or remove one of the trait methods"
